add popups to markers in Blazor client and possibility to see details of ad via dblclick on marker
