# NewPlaceBlazor/Utils/JwtHttpClientHandler.cs
@@ -1,5 +1,7 @@
 ﻿using System;
 using System.Net.Http;
+using System.Net.Mime;
+using System.Text;
 using System.Text.Json;
 using System.Threading;
 using System.Threading.Tasks;
@@ -34,9 +36,16 @@ namespace NewPlaceBlazor.Utils
 
         private async Task<string> AuthenticateAsync(CancellationToken cancellationToken)
         {
-            var response = await base.SendAsync(new HttpRequestMessage(HttpMethod.Get, _baseUri + "authorization/login"), cancellationToken);
+            var request = new HttpRequestMessage(HttpMethod.Post, _baseUri + "api/authorization/login");
+            UserRepresentation userRepresentation = new UserRepresentation
+            {
+                Password = "AAA"
+            };
+            request.Content = new StringContent(JsonSerializer.Serialize(userRepresentation), Encoding.UTF8, MediaTypeNames.Application.Json);
+            var response = await base.SendAsync(request, cancellationToken);
             var contentString = await response.Content.ReadAsStringAsync(cancellationToken);
-            var token = JsonSerializer.Deserialize<string>(contentString);
+            var user = JsonSerializer.Deserialize<UserRepresentation>(contentString, new JsonSerializerOptions { PropertyNameCaseInsensitive = true });
+            var token = user.Token; 
             await _localStorage.SetItemAsStringAsync("token", token);
             return token;
         }
